feat: add cards

--- a/index.html
+++ b/index.html
@@ -4,8 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="menu">
+        <div class="menu-togle">
+            <span></span>
+            <span></span>
+            <span></span>  
+        </div>  
+        <div class="train-togle"></div>   
+    </div>
+    <nav>
+        <ul>
+            <li class="main">Main page</li>
+            <li class="body">Body parts</li>
+            <li class="cloth">Clothing</li>
+            <li class="food">Food</li>
+            <li class="sea">Sea animal</li>
+            <li class="color">Color</li>
+            <li class="figure">Figures</li>
+            <li class="fruit">Fruits</li>
+            <li class="transport">Transport</li>
+        </ul>
+    </nav>
+<div class="body-cards">
+    <div class="cards">
+            <div class="card body">
+                <img src="src/img/body/body0.png" alt="body">
+                <div class="info">
+                    <p>Body parts</p>
+                    <div class="rotate"></div>
+                </div>
+            </div>
+            <div class="card cloth">
+                <img src="src/img/cloth/cloth0.png" alt="cloth">
+                <div class="info">
+                    <p>Clothing</p>
+                    <div class="rotate"></div>
+                </div>
+            </div>
+            <div class="card food">
+                <img src="src/img/food/food0.png" alt="food">
+                <div class="info">
+                    <p>Food</p>
+                    <div class="rotate"></div>
+                </div>
+            </div>
+            <div class="card sea">
+                <img src="src/img/animal/animal0.png" alt="sea-animal">
+                <div class="info">
+                    <p>Sea animal</p>
+                    <div class="rotate"></div>
+                </div>
+            </div>
+            <div class="card color">
+                <img src="src/img/color/color0.png" alt="Color">
+                <div class="info">
+                    <p>Color</p>
+                    <div class="rotate"></div>
+                </div>
+            </div>
+            <div class="card figure">
+                <img src="src/img/figure/figure0.png" alt="Figures">
+                <div class="info">
+                    <p>Figures</p>
+                    <div class="rotate"></div>
+                </div>
+            </div>
+            <div class="card fruit">
+                <img src="src/img/fruit/fruit0.png" alt="Fruits">
+                <div class="info">
+                    <p>Fruits</p>
+                    <div class="rotate"></div>
+                </div>  
+            </div>
+            <div class="card transport">
+                <img src="src/img/transport/trnsport0.png" alt="Transport">
+                <div class="info">
+                    <p>Transport</p>
+                    <div class="rotate"></div>
+                </div>
+            </div>
+    </div>
+</div>
+    <script src="app.js"></script>
 </body>
 </html>
