feat: add switch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <span></span>
             <span></span>  
         </div>  
-        <div class="train-togle"></div>   
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+            <span class='train'>train</span>
+            <span class='play'>play</span>
+        </label>  
     </div>
     <nav>
         <ul>
