feat: add statistic

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li class="figure">Figures</li>
             <li class="fruit">Fruits</li>
             <li class="transport">Transport</li>
+            <li class="listat">Statistic</li>
         </ul>
     </nav>
     <div class="result">
@@ -91,6 +92,20 @@
 </div>
 <div class="no-grac">
     
+</div>
+
+<div class="statistic">
+    <div class="stat-info">
+        <div class="word text">Text</div>
+        <div class="word translate">Translate</div>
+        <div class="word clicks">Train clicks</div>
+        <div class="word correct">Correct answer</div>
+        <div class="word error">Error answer</div>
+        <div class="word errors">% Erros</div>
+    </div>
+    <div class="stat">
+    
+    </div>
 </div>
     <script src="app.js"></script>
 </body>
