feat: add reset statistic

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>English for kids</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="src/img/fav.ico" type="image/x-icon">
 </head>
 <body>
 <div class="all">
@@ -95,6 +96,7 @@
 </div>
 
 <div class="statistic">
+    <div class="reset">Reset statistic</div>
     <div class="stat-info">
         <div class="word text">Text</div>
         <div class="word translate">Translate</div>
